Added Cookie Policy and site access cookies

--- a/wedding/templates/index.html
+++ b/wedding/templates/index.html
@@ -83,7 +83,7 @@
                 <div class="col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2 col-xs-8 col-xs-offset-3 text_align body_color">
                     {%block content %} {%endblock %}
                 </div>
-            </div>
+            </div><br>
         </div>
         <div class="panel-footer clearfix navbar-fixed-bottom">
             <div class="pull-right">
